fix: prevent avatar overlapping text in inbox message preview

--- a/app/assets/stylesheets/components/avatar.css
+++ b/app/assets/stylesheets/components/avatar.css
@@ -1,7 +1,7 @@
 @layer component {
     .avatar {
-        width: 50px;
-        height: 50px;
+        width: 45px;
+        height: 45px;
         border-radius: 100%;
         z-index: 1;
         position: relative;
@@ -11,6 +11,12 @@
         background-color: var(--color-medium-blue);
         font-size: var(--font-size-large);
         font-weight: bold;
+
+        @media (max-width: 60em) {
+            width: 35px;
+            height: 35px;
+            font-size: var(--font-size-x-small);
+        }
     }
 
     .avatar--small {
