--- a/app/assets/stylesheets/components/inbox.css
+++ b/app/assets/stylesheets/components/inbox.css
@@ -71,33 +71,30 @@
     }
 
     .inbox__message__avatar {
-        position: relative;
-        padding: 0.4rem 0.5rem 0;
-        align-self: flex-start;
-
-        @media (min-width: 40em) {
-            padding-top: 0;
-        }
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 0.5rem;
     }
 
     .inbox__message__link {
         text-decoration: none;
         outline: none;
         color: inherit;
-        flex-grow: 1;
         cursor: pointer;
-        display: flex;
-        justify-content: space-between;
         align-items: center;
+        display: flex;
+        flex-grow: 1;
+        min-width: 0;
     }
 
     .inbox__message__content {
-        justify-content: flex-start;
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        min-width: 0;
         width: 100%;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        display: block;
         padding: 0.3rem 1em 0.3rem 0;
 
         @media (min-width: 60em) {
@@ -107,11 +104,11 @@
     }
 
     .inbox__message__headline {
-        display: flex;
-        align-items: center;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
         margin: 0 0 -1px;
         padding-bottom: 0.1rem;
-        overflow: hidden;
 
         @media (min-width: 60em) {
             max-width: calc(100% - 7rem);
@@ -119,26 +116,36 @@
     }
 
     .inbox__message__title {
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
         font-weight: normal;
         line-height: 1.3;
-        flex-shrink: 0;
-        word-break: break-word;
-
-        @media (min-width: 40em) {
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
     }
 
     .inbox__message__line {
+        display: flex;
+        gap: 0.25rem;
+        overflow: hidden;
+        white-space: nowrap;
         margin: 0;
+        padding: 1px 0;
+    }
+
+    .message__author {
+        flex-shrink: 0;
+        max-width: 50%;
         overflow: hidden;
         text-overflow: ellipsis;
-        padding: 1px 0;
+    }
 
-        @media (min-width: 40em) {
-            max-width: calc(100% - 7rem);
-        }
+    .inbox__message__summary {
+        flex: 1;
+        min-width: 0;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     .inbox__message__summary:not(:empty)::before {
